# wgpu_rust

./: ANDROID_BUILD_GUIDE.md  AndroidManifest.xml  Cargo.toml  MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  build-android.bat
.cargo/: config.toml
src/: main.rs
src/renderer_backend/: mesh_builder.rs  mod.rs  pipeline_builder.rs  pipline_builder.rs
src/shaders/: shader.wgsl
